приступаем к последним шрихам каталога

--- a/source/less/cat.less
+++ b/source/less/cat.less
@@ -10,7 +10,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;
-  outline: 1px solid red;
   margin-top: 39px;
   padding-left: 20px;
   padding-right: 20px;
@@ -19,7 +18,7 @@
   @media (min-width: @tablet-width) {
     width: 710px;
     margin-top: 65px;
-    height: 195px;
+    min-height: 195px;
     padding: 0;
   }
   @media (min-width: @desktop-width) {
@@ -75,7 +74,6 @@
   margin-top: 10px;
   align-self: flex-start;
 
-  outline: 1px solid red;
   margin-bottom: 28px;
 
   @media (min-width: @tablet-width) {
