--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,13 +1,13 @@
 .page-footer {
   position: relative;
 
-  outline: 1px solid red;
   width: 100%;
   margin: 0 auto;
   opacity: 1;
   padding: 28px 0;
   display: flex;
   flex-direction: column;
+  background-color: #f2f2f2;
 }
 @media (min-width: @tablet-width) {
   .page-footer {
@@ -23,7 +23,6 @@
   }
 }
 .page-footer__data {
-  outline: 1px solid red;
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
@@ -38,15 +37,15 @@
     margin-bottom: 40px;
     align-self: flex-start;
   }
-}
-@media (min-width: @desktop-width) {
-  .page-footer__data {
+  @media (min-width: @desktop-width) {
     position: absolute;
-    top: 93px;
+    top: 96px;
     left: 40px;
+    z-index: 10;
     width: 570px;
     min-height: 200px;
     opacity: 1;
+    background-color: #ffffff;
   }
 }
 .page-footer__invitation {
@@ -54,8 +53,6 @@
   padding: 0;
   width: 127px;
   font-weight: normal;
-  outline: 1px solid red;
-  color: green;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -75,7 +72,6 @@
 .page-footer__address {
   margin: 0;
   padding: 0;
-  outline: 1px solid red;
   font-size: 14px;
   line-height: 20px;
   font-family: "Arial";
@@ -108,7 +104,6 @@
   position: relative;
   width: 100%;
   height: 361px;
-  outline: 5px solid orange;
 
   @media (min-width: @tablet-width) {
     height: 400px;
@@ -128,7 +123,6 @@
 .page-footer__map {
   position: relative;
   display: block;
-  outline: 2px solid black;
   margin: 0 auto;
   width: 318px;
 
@@ -144,7 +138,6 @@
   }
 }
 .page-footer__map-image {
-  opacity: 0.5;
   display: block;
   width: 318px;
   height: 361px;
@@ -184,7 +177,6 @@
     }
 }
 .page-footer__low {
-  outline: 2px solid green;
   background-color: #f2f2f2;
   background-color: transparent;
 
@@ -200,7 +192,6 @@
     min-height: 150px;
     width: 768px;
     margin: 0 auto;
-    outline: 1px solid red;
     box-sizing: border-box;
     background-color: transparent;
   }
@@ -214,7 +205,6 @@
 .page-footer__logo {
   display: block;
   margin-bottom: 31px;
-  outline: 1px solid blue;
   width: 128px;
   height: 24px;
   align-self: center;
@@ -232,7 +222,6 @@
 .page-footer__logo-image {
   display: block;
   margin: 0 auto;
-  outline: 1px solid red;
 }
 
 .page-footer__logo-image:hover {
@@ -249,7 +238,6 @@
   min-height: 77px;
   margin: 0 auto;
   width: 280px;
-  outline: 2px solid red;
 
   @media (min-width: @tablet-width) {
     min-height: 0;
@@ -271,7 +259,6 @@
   width: 60px;
   height: 60px;
   transform: scale(0.7);
-  outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
     top: -20px;
