--- a/source/less/main-catalog.less
+++ b/source/less/main-catalog.less
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  outline: 1px solid black;
   padding: 17px 0 0 0;
 }
 .main-catalog h1 {
@@ -14,11 +13,9 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 60px;
-  color: green;
   margin-bottom: 27px;
   padding-left: 20px;
   box-sizing: border-box;
-  outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
     margin-top: 13px;
@@ -34,12 +31,14 @@
   }
 }
 .main-catalog__list {
+  @media (max-width: @mobile-width-only) {
+    border-left: 1px solid #ededed;
+    border-right: 1px solid #ededed;
+  }
   list-style: none;
   margin: 0;
   padding: 0;
   margin: 0 auto;
-
-  outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
     margin-top: 139px;
