--- a/source/less/product-add.less
+++ b/source/less/product-add.less
@@ -1,9 +1,10 @@
 .product-add {
   border-top: 1px solid #cdcdcd;
   border-bottom: 1px solid #cdcdcd;
+  border-top: 1px solid green;
+  border-bottom: 1px solid green;
 
   min-height: 127px;
-  outline: 1px solid black;
 
   @media (min-width: @tablet-width) {
     min-height: 139px;
@@ -41,7 +42,7 @@
     margin-top: -2px;
     margin-left: 2px;
     margin-bottom: 15px;
-    outline: 1px solid red;
+
     width: 300px;
   }
   @media (min-width: @desktop-width) {
@@ -57,7 +58,6 @@
   font-size: 14px;
   line-height: 14px;
   font-family: "Arial";
-  outline: 1px solid red;
   margin-bottom: 14px;
   vertical-align: middle;
   display: flex;
@@ -78,7 +78,6 @@
 .product-add__list li:nth-child(2) {
   @media (min-width: @tablet-width) {
     min-width: 45px;
-    outline: 1px solid green;
     text-align: right;
     margin-left: 52px;
   }
