--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -5,7 +5,6 @@
   text-transform: uppercase;
   margin: 0;
   position: relative;
-  outline: 1px solid orange;
 
   @media (min-width: @desktop-width) {
     position: absolute;
@@ -47,7 +46,6 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  outline: 1px solid red;
 
   min-height: 198px;
   width: 320px;
@@ -68,12 +66,13 @@
   }
 }
 .main-nav__item {
+  @media (max-width: @mobile-width-only) {
+    border-top: 1px solid #e6e6e6;
+    border-bottom: 1px solid #e6e6e6;
+  }
   text-align: center;
   padding-top: 22px;
   padding-bottom: 22px;
-  border-top: 1px solid #e6e6e6;
-  border-bottom: 1px solid #e6e6e6;
-  outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
     font-size: 18px;
