--- a/source/less/slider.less
+++ b/source/less/slider.less
@@ -1,5 +1,4 @@
 .slider__slide1 {
-  outline: 1px solid red;
   margin: 0 auto;
   margin-top: 23px;
   width: 320px;
@@ -68,8 +67,7 @@
   height: 13px;
   margin-top: 3px;
   margin-right: 17px;
-  border: 1px solid #cdcdcd;
-  border: 1px solid red;
+  border: 1px solid #cecece;
   background-color: #ffffff;
   border-radius: 8px;
 
