--- a/source/less/example.less
+++ b/source/less/example.less
@@ -1,7 +1,7 @@
 .example {
-  background-color: #f2f2f2;
-  background-color: transparent;
-  outline: 1px solid red;
+  @media (max-width: @mobile-width-only) {
+    background-color: #f2f2f2;
+  }
   min-height: 705px;
   padding-top: 0;
   width: 100%;
@@ -18,7 +18,6 @@
 .example__container-title {
   width: 320px;
   margin: 0 auto;
-  outline: 1px solid black;
 
   @media (min-width: @tablet-width) {
     width: 768px;
@@ -35,8 +34,6 @@
   font-weight: normal;
   margin-top: 16px;
   margin-left: 20px;
-  color: green;
-  outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
@@ -56,7 +53,6 @@
   width: 320px;
   margin: 0 auto;
   margin-top: 17px;
-  outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
     margin-top: 43px;
@@ -67,12 +63,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    background-color: #f2f2f2;
   }
 }
 
 .example__desktop-grid1 {
   margin: 0 20px;
-  outline: 1px solid red;
 
   @media (min-width: @tablet-width) {
     margin: 0;
@@ -80,7 +76,6 @@
   @media (min-width: @desktop-width) {
     width: 500px;
 
-    outline: 1px solid blue;
     margin-top: 0;
   }
 }
@@ -93,7 +88,6 @@
   font-family: "Arial";
   margin-top: 25px;
   margin-right: 12px;
-  outline: 1px solid blue;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
@@ -111,7 +105,6 @@
 }
 
 .example__preface {
-  outline: 3px solid red;
   @media (min-width: @tablet-width) {
 
     display: flex;
@@ -124,7 +117,6 @@
 
 .example__indicators {
   position: relative;
-  outline: 1px solid green;
   display: flex;
   justify-content: space-between;
 
@@ -151,7 +143,6 @@
   display: block;
   text-align: center;
   padding-top: 14px;
-  color: green;
   box-sizing: border-box;
   width: 124px;
   min-height: 54px;
@@ -179,8 +170,7 @@
   box-sizing: border-box;
   text-align: center;
   z-index: 5;
-  background-color: #ffffff;
-  outline: 1px solid red;
+  background-color: #f2f2f2;
 
   @media (min-width: @tablet-width) {
     font-size: 14px;
@@ -188,6 +178,10 @@
     width: 124px;
     margin: -8px auto 0 auto;
     padding-left: 0;
+    background-color: #ffffff;
+  }
+  @media (min-width: @desktop-width) {
+    background-color: #f2f2f2;
   }
 }
 .example__second-small small {
@@ -205,7 +199,6 @@
   text-transform: uppercase;
   display: block;
   text-align: center;
-  outline: 1px solid green;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -239,7 +232,6 @@
 }
 
 .example__desktop-grid2 {
-  outline: 1px solid green;
   width: 320px;
   margin: 0 auto;
 
@@ -248,12 +240,10 @@
     min-height: 462px;
     margin-top: 235px;
     background-color: #f2f2f2;
-    background-color: transparent;
   }
   @media (min-width: @desktop-width) {
     width: 690px;
     margin: 0;
-    outline: 1px solid blue;
   }
 }
 
