осталось разобраться с инстой

--- a/source/less/description.less
+++ b/source/less/description.less
@@ -56,14 +56,14 @@
     left: 490px;
     width: 552px;
     height: 499px;
-    z-index: -5;
+    z-index: 0;
 
     @media (min-resolution: @retina-dppx) {
       background-size: 552px auto;
     }
   }
 }
-
+/*
 @media (min-width: @desktop-width) {
   .description::after {
     position: absolute;
@@ -82,7 +82,7 @@
       background-size: auto 696px;
     }
   }
-}
+} */
 
 
 .description__title {
