--- a/source/less/example.less
+++ b/source/less/example.less
@@ -64,6 +64,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     background-color: #f2f2f2;
+    background-color: transparent;
   }
 }
 
@@ -240,6 +241,7 @@
     min-height: 462px;
     margin-top: 235px;
     background-color: #f2f2f2;
+    background-color: transparent;
   }
   @media (min-width: @desktop-width) {
     width: 690px;
