--- a/source/less/style.less
+++ b/source/less/style.less
@@ -51,6 +51,7 @@ body {
   flex-direction: column;
   margin: 0;
   padding: 0;
+  max-width: 1520px;
 
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
@@ -82,6 +83,14 @@ img {
   body {
     background: url("../img/substrate/cat-energy-inde-desktop.jpg") no-repeat 50% 0;
     background-size: 1440px auto;
+  }
+}
+.indx {
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/index-background-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 107.5% 0;
+    background-size: 696px auto;
   }
 }
 
