--- a/source/less/style.less
+++ b/source/less/style.less
@@ -85,7 +85,7 @@ img {
     background-size: 1440px auto;
   }
 }
-.indx {
+.index {
   @media (min-width: @desktop-width) {
     background-image: url("../img/index-background-desktop@1x.jpg");
     background-repeat: no-repeat;
