--- a/source/less/how-work.less
+++ b/source/less/how-work.less
@@ -50,7 +50,7 @@
 .how-work__describe {
   font-size: 14px;
   line-height: 18px;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
 
   position: relative;
 
