--- a/source/less/product-add.less
+++ b/source/less/product-add.less
@@ -55,7 +55,7 @@
   padding: 0;
   font-size: 14px;
   line-height: 14px;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   margin-bottom: 14px;
   vertical-align: middle;
   display: flex;
