--- a/source/less/product.less
+++ b/source/less/product.less
@@ -135,7 +135,7 @@
 .product__table {
   font-size: 12px;
   line-height: 16px;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   font-weight: normal;
   margin: 0;
   padding: 0;
@@ -151,7 +151,6 @@
     margin-bottom: 33px;
     margin-left: 37px;
     font-size: 16px;
-    font-family: 16px;
   }
 }
 
