--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -18,7 +18,7 @@
 
   display: flex;
   flex-direction: column;
-  align-item: flex-start;
+  align-items: flex-start;
 }
 .additionally__title-container {
   width: 320px;
