--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -142,7 +142,7 @@
   font-size: 14px;
   line-height: 18px;
   font-weight: normal;
-  font-family: "Arial";
+  font-family: "Arial", sans-serif;
   width: 225px;
   margin-top: 30px;
   position: relative;
