--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,66 +1,78 @@
 .page-footer {
   position: relative;
 
-  width: 100%;
-  margin: 0 auto;
-  opacity: 1;
-  padding: 28px 0;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  margin: 0 auto;
+  padding: 28px 0;
+
+  opacity: 1;
 }
+
 @media (min-width: @tablet-width) {
   .page-footer {
     padding: 65px 0;
   }
 }
+
 @media (min-width: @desktop-width) {
   .page-footer {
+    position: relative;
+
     width: 1300px;
     min-height: 550px;
-    position: relative;
     padding: 0;
   }
 }
+
 .page-footer__data {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
-  width: 280px;
   justify-content: space-between;
+  width: 280px;
+  margin: 0 auto;
   margin-bottom: 26px;
 
   @media (min-width: @tablet-width) {
+    width: 626px;
     min-height: 78px;
     margin: 0 auto;
-    width: 626px;
     margin-bottom: 40px;
+
     align-self: flex-start;
   }
+
   @media (min-width: @desktop-width) {
     position: absolute;
     top: 96px;
     left: 40px;
     z-index: 10;
+
     width: 570px;
     min-height: 200px;
-    opacity: 1;
+
     background-color: #ffffff;
   }
 }
+
 .page-footer__invitation {
+  width: 127px;
   margin: 0;
   padding: 0;
-  width: 127px;
+
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
+    width: 157px;
+
     font-size: 20px;
     line-height: 25px;
-    width: 157px;
   }
+
   @media (min-width: @desktop-width) {
     width: 230px;
     padding-top: 65px;
@@ -68,39 +80,45 @@
     box-sizing: border-box;
   }
 }
+
 .page-footer__address {
+  width: 140px;
   margin: 0;
   padding: 0;
+
   font-size: 14px;
   line-height: 20px;
-  font-family: "Arial";
-  width: 140px;
+  font-family: "Arial", sans-serif;
 
   @media (min-width: @tablet-width) {
+    width: 156px;
     font-size: 16px;
     line-height: 20px;
-    width: 156px;
     text-align: right;
   }
+
   @media (min-width: @desktop-width) {
     width: 245px;
     padding-top: 65px;
     padding-right: 90px;
     box-sizing: border-box;
+
     text-align: left;
   }
 }
+
 .page-footer__address p {
   margin: 0;
   padding: 0;
+
   @media (min-width: @tablet-width) {
     margin-bottom: 17px;
   }
 }
 
-
 .page-footer__map-block {
   position: relative;
+
   width: 100%;
   height: 361px;
 
@@ -108,6 +126,7 @@
     height: 400px;
   }
 }
+
 .page-footer iframe {
   position: absolute;
   top: 0;
@@ -121,9 +140,10 @@
 
 .page-footer__map {
   position: relative;
+
   display: block;
-  margin: 0 auto;
   width: 318px;
+  margin: 0 auto;
 
   @media (min-width: @tablet-width) {
     width: 767px;
@@ -151,33 +171,39 @@
     height: 400px;
   }
 }
+
 .page-footer__map::before {
   @media (max-width: @mobile-width-only) {
     transform: scale(0.5);
   }
-    content: "";
-    position: absolute;
-    top: 110px;
-    left: 100px;
-    width: 124px;
-    height: 106px;
-    background-image: url("../img/map-pin.png");
-    background-repeat: no-repeat;
-    background-position: 0 0;
 
-    @media (min-width: @tablet-width) {
-      top: 150px;
-      left: 317px;
-    }
+  content: "";
+  position: absolute;
+  top: 110px;
+  left: 100px;
 
-    @media (min-width: @desktop-width) {
-      top: 150px;
-      left: 925px;
-    }
+  width: 124px;
+  height: 106px;
+
+  background-image: url("../img/map-pin.png");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+
+  @media (min-width: @tablet-width) {
+    top: 150px;
+    left: 317px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 150px;
+    left: 925px;
+  }
 }
+
 .page-footer__low {
   background-color: #f2f2f2;
 }
+
 .page-footer__low-container {
   display: flex;
   flex-direction: column;
@@ -185,25 +211,24 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
-    padding: 58px 0;
     min-height: 150px;
     width: 768px;
     margin: 0 auto;
+    padding: 58px 0;
     box-sizing: border-box;
-    background-color: transparent;
   }
 
   @media (min-width: @desktop-width) {
-    width: 1300px;
     justify-content: space-between;
+    width: 1300px;
   }
 }
 
 .page-footer__logo {
   display: block;
-  margin-bottom: 31px;
   width: 128px;
   height: 24px;
+  margin-bottom: 31px;
   align-self: center;
 
   @media (min-width: @tablet-width) {
@@ -211,11 +236,13 @@
     margin-left: 31px;
     margin-right: 150px;
   }
+
   @media (min-width: @desktop-width) {
     margin-left: 41px;
     margin-right: 405px;
   }
 }
+
 .page-footer__logo-image {
   display: block;
   margin: 0 auto;
@@ -240,21 +267,25 @@
     min-height: 0;
     width: 114px;
     margin-top: 3px;
-    margin-left: 126px;
     margin-right: 78px;
+    margin-left: 126px;
   }
+
   @media (min-width: @desktop-width) {
     margin-top: 6px;
     margin-right: 90px;
     margin-left: 380px;
   }
 }
+
 .page-footer__copyright-icon {
   position: absolute;
   top: 9px;
   right: -18px;
+
   width: 60px;
   height: 60px;
+
   transform: scale(0.7);
 
   @media (min-width: @tablet-width) {
@@ -262,22 +293,20 @@
     right: -67px;
   }
 }
+
 .page-footer__copyright-link {
-  background-color: transparent;
-  color: #444444;
   display: block;
   padding-top: 27px;
 
   font-size: 16px;
   line-height: 16px;
-  font-family: "Arial";
-  ouline: 1px solid green;
+  font-family: "Arial", sans-serif;
+  color: #444444;
 
   @media (min-width: @tablet-width) {
-    padding: 0;
     margin-top: 4px;
+    padding: 0;
   }
-
 }
 
 .page-footer__copyright-link:hover .page-footer__copyright-icon {
